err/anji-orm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anji_orm'...
Compiling './lib/python3.5/site-packages/anji_orm/core.py'...
***   File "./lib/python3.5/site-packages/anji_orm/core.py", line 42
    self.rethinkdb_connection_kwargs: Dict[str, Union[str, int]] = rethinkdb_connection_kwargs
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anji_orm/fields'...
Compiling './lib/python3.5/site-packages/anji_orm/fields/base.py'...
***   File "./lib/python3.5/site-packages/anji_orm/fields/base.py", line 41
    _anji_orm_field: bool = True
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anji_orm/fields/relation.py'...
***   File "./lib/python3.5/site-packages/anji_orm/fields/relation.py", line 31
    result: asyncio.Task = asyncio.ensure_future(model_class.async_get(model_id))
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anji_orm/fields/validation.py'...
***   File "./lib/python3.5/site-packages/anji_orm/fields/validation.py", line 31
    raise ValueError(f'Field {self.name} value should have {str(self.param_type)} type instead of {value}')
                                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anji_orm/model.py'...
***   File "./lib/python3.5/site-packages/anji_orm/model.py", line 183
    _fields: Dict[str, AbstractField] = {}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anji_orm/syntax'...
Compiling './lib/python3.5/site-packages/anji_orm/syntax/parse.py'...
***   File "./lib/python3.5/site-packages/anji_orm/syntax/parse.py", line 87
    left_filter: List[List] = [[]]
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anji_orm/syntax/query.py'...
***   File "./lib/python3.5/site-packages/anji_orm/syntax/query.py", line 75
    return f"{'[' if self.left_close else '('}{self.left_bound}, {self.right_bound}{']' if self.right_close else ')'}"
                                                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anji_orm/utils.py'...
***   File "./lib/python3.5/site-packages/anji_orm/utils.py", line 77
    return [await ensure_element(x) for x in sequence]
           ^
SyntaxError: 'await' expressions in comprehensions are not supported

Listing './lib/python3.5/site-packages/anji_orm-0.3.14.dist-info'...
Listing './lib/python3.5/site-packages/async_repool'...
Compiling './lib/python3.5/site-packages/async_repool/async_pool.py'...
***   File "./lib/python3.5/site-packages/async_repool/async_pool.py", line 67
    self.pool: 'AsyncConnectionPool' = pool
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/async_repool-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/lazy'...
Listing './lib/python3.5/site-packages/lazy/tests'...
Listing './lib/python3.5/site-packages/lazy-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repool_forked'...
Listing './lib/python3.5/site-packages/repool_forked-0.3.egg-info'...
Listing './lib/python3.5/site-packages/rethinkdb'...
Listing './lib/python3.5/site-packages/rethinkdb/asyncio_net'...
Listing './lib/python3.5/site-packages/rethinkdb/backports'...
Listing './lib/python3.5/site-packages/rethinkdb/backports/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/rethinkdb/gevent_net'...
Listing './lib/python3.5/site-packages/rethinkdb/tornado_net'...
Listing './lib/python3.5/site-packages/rethinkdb/twisted_net'...
Listing './lib/python3.5/site-packages/rethinkdb-2.3.0.post6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/fields_test'...
Compiling './lib/python3.5/site-packages/tests/index_policy_test.py'...
***   File "./lib/python3.5/site-packages/tests/index_policy_test.py", line 34
    index_name = f"{first_index_name}:{':'.join(rest_indexes)}"
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/models_test'...
Listing './lib/python3.5/site-packages/tests/query_test'...
Listing './share'...
Listing './share/python-wheels'...
